message LoginReq
{
	required int32 uin = 1;
	optional int32 login_type = 2;
}

message LoginRsp
{
	required int32 ret = 1;
}